--- a/labs/index.html
+++ b/labs/index.html
@@ -39,5 +39,7 @@
     Esta sección forma parte de <strong>El Pergamino Digital</strong> · Proyecto doctrinal, técnico y pedagógico de Julio César Abreu.
   </footer>
 
+  <script src="/el-pergamino-digital/assets/js/main.js" defer></script>
+
 </body>
 </html>
