--- a/labs/index.html
+++ b/labs/index.html
@@ -1,45 +1,60 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🧪 Laboratorios técnicos · El Pergamino Digital</title>
-  <link rel="stylesheet" href="/el-pergamino-digital/assets/css/style.css">
+  <link rel="stylesheet" href="/el-pergamino-digital/assets/css/style.css" />
+  <script src="/el-pergamino-digital/assets/js/main.js" defer></script>
 </head>
 <body>
 
-  <h1 class="titulo-principal">🧪 Laboratorios técnicos</h1>
+  <header>
+    <h1 class="titulo-principal">🧪 Laboratorios técnicos</h1>
+    <p class="subtitulo">Ejercicios prácticos alineados con estándares internacionales de ciberseguridad</p>
+  </header>
 
-  <div class="bloque">
-    <span class="etiqueta">📂 Índice de laboratorios:</span>
-    <div class="respuesta">
-      <ul>
-        <li><a href="/el-pergamino-digital/labs/labs01/">Lab 01 – Monitorización de tráfico con Wireshark y tcpdump</a></li>
-        <li><a href="/el-pergamino-digital/labs/labs02/">Lab 02 – Descubrimiento de red y fingerprinting con Nmap</a></li>
-        <li><a href="/el-pergamino-digital/labs/labs03/">Lab 03 – Análisis de cabeceras HTTP y exposición de metadatos</a></li>
-        <li><a href="/el-pergamino-digital/labs/labs04/">Lab 04 – Captura de credenciales en protocolos inseguros (FTP, Telnet, HTTP)</a></li>
-        <li><a href="/el-pergamino-digital/labs/labs05/">Lab 05 – Escaneo de vulnerabilidades con OpenVAS y análisis de resultados</a></li>
-      </ul>
-    </div>
-  </div>
+  <main>
 
-  <div class="bloque">
-    <span class="etiqueta">🔗 Navegación transversal:</span>
-    <div class="respuesta">
-      <ul>
-        <li><a href="/el-pergamino-digital/">🏠 Portada doctrinal</a></li>
-        <li><a href="/el-pergamino-digital/glosario/">📚 Glosario técnico-aforístico</a></li>
-        <li><a href="/el-pergamino-digital/simulador/">🎓 Simulador certificador</a></li>
-        <li><a href="/el-pergamino-digital/modulos/">🧭 Módulos de formación</a></li>
-      </ul>
-    </div>
-  </div>
+    <section class="bloque">
+      <span class="etiqueta">📂 Índice de laboratorios:</span>
+      <div class="respuesta">
+        <ul>
+          <li><a href="/el-pergamino-digital/labs/labs01/">Lab 01 – Monitorización de tráfico con Wireshark y tcpdump</a></li>
+          <li><a href="/el-pergamino-digital/labs/labs02/">Lab 02 – Descubrimiento de red y fingerprinting con Nmap</a></li>
+          <li><a href="/el-pergamino-digital/labs/labs03/">Lab 03 – Análisis de cabeceras HTTP y exposición de metadatos</a></li>
+          <li><a href="/el-pergamino-digital/labs/labs04/">Lab 04 – Captura de credenciales en protocolos inseguros (FTP, Telnet, HTTP)</a></li>
+          <li><a href="/el-pergamino-digital/labs/labs05/">Lab 05 – Escaneo de vulnerabilidades con OpenVAS y análisis de resultados</a></li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="bloque">
+      <span class="etiqueta">🎯 Propósito de esta sección:</span>
+      <div class="respuesta">
+        Esta colección de laboratorios permite aplicar técnicas de análisis, escaneo y evaluación de seguridad en entornos controlados. Cada ejercicio está diseñado para reforzar competencias clave en ciberseguridad ofensiva y defensiva, con trazabilidad hacia marcos como <strong>CIS Controls v8</strong>, <strong>NIST SP 800-115</strong> y <strong>MITRE ATT&CK</strong>.
+      </div>
+    </section>
+
+    <section class="bloque">
+      <span class="etiqueta">🔗 Navegación transversal:</span>
+      <div class="respuesta">
+        <ul>
+          <li><a href="/el-pergamino-digital/">🏠 Portada doctrinal</a></li>
+          <li><a href="/el-pergamino-digital/glosario/">📚 Glosario técnico-aforístico</a></li>
+          <li><a href="/el-pergamino-digital/simulador/">🎓 Simulador certificador</a></li>
+          <li><a href="/el-pergamino-digital/modulos/">🧭 Módulos de formación</a></li>
+        </ul>
+      </div>
+    </section>
+
+  </main>
 
   <footer>
-    Esta sección forma parte de <strong>El Pergamino Digital</strong> · Proyecto doctrinal, técnico y pedagógico de Julio César Abreu.
+    <p>
+      Esta sección forma parte de <strong>El Pergamino Digital</strong> · Proyecto doctrinal, técnico y pedagógico de Julio César Abreu.
+    </p>
   </footer>
-
-  <script src="/el-pergamino-digital/assets/js/main.js" defer></script>
 
 </body>
 </html>
