--- a/labs/index.html
+++ b/labs/index.html
@@ -3,58 +3,53 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🧪 Laboratorios técnicos · El Pergamino Digital</title>
-  <link rel="stylesheet" href="/el-pergamino-digital/assets/css/style.css" />
-  <script src="/el-pergamino-digital/assets/js/main.js" defer></script>
+  <title>Laboratorios – El Pergamino Digital</title>
+  <link rel="stylesheet" href="../css/estilo.css" />
+  <link rel="icon" href="../assets/favicon.png" type="image/png" />
 </head>
 <body>
 
   <header>
-    <h1 class="titulo-principal">🧪 Laboratorios técnicos</h1>
-    <p class="subtitulo">Ejercicios prácticos alineados con estándares internacionales de ciberseguridad</p>
+    <nav>
+      <a href="../index.html">Inicio</a>
+      <a href="../labs/" class="activo">Laboratorios</a>
+      <a href="../glosario/">Glosario</a>
+      <a href="../simulador/">Simulador</a>
+      <a href="../modulos/">Módulos</a>
+    </nav>
+    <h1>Laboratorios Técnicos</h1>
+    <p class="subtitulo">Prácticas certificadoras alineadas con estándares internacionales</p>
   </header>
 
-  <main>
-
-    <section class="bloque">
-      <span class="etiqueta">📂 Índice de laboratorios:</span>
-      <div class="respuesta">
-        <ul>
-          <li><a href="/el-pergamino-digital/labs/labs01/">Lab 01 – Monitorización de tráfico con Wireshark y tcpdump</a></li>
-          <li><a href="/el-pergamino-digital/labs/labs02/">Lab 02 – Descubrimiento de red y fingerprinting con Nmap</a></li>
-          <li><a href="/el-pergamino-digital/labs/labs03/">Lab 03 – Análisis de cabeceras HTTP y exposición de metadatos</a></li>
-          <li><a href="/el-pergamino-digital/labs/labs04/">Lab 04 – Captura de credenciales en protocolos inseguros (FTP, Telnet, HTTP)</a></li>
-          <li><a href="/el-pergamino-digital/labs/labs05/">Lab 05 – Escaneo de vulnerabilidades con OpenVAS y análisis de resultados</a></li>
-        </ul>
-      </div>
+  <main class="contenedor-labs">
+    <section class="grid-labs">
+      <a href="labs01/" class="lab-card">
+        <h2>🧪 Lab 01</h2>
+        <p>Monitorización de tráfico con Wireshark y tcpdump</p>
+      </a>
+      <a href="labs02/" class="lab-card">
+        <h2>🔍 Lab 02</h2>
+        <p>Descubrimiento de red y fingerprinting con Nmap</p>
+      </a>
+      <a href="labs03/" class="lab-card">
+        <h2>🌐 Lab 03</h2>
+        <p>Análisis de cabeceras HTTP y exposición de metadatos</p>
+      </a>
+      <a href="labs04/" class="lab-card">
+        <h2>🔓 Lab 04</h2>
+        <p>Captura de credenciales en protocolos inseguros (FTP, Telnet, HTTP)</p>
+      </a>
+      <a href="labs05/" class="lab-card">
+        <h2>🛡️ Lab 05</h2>
+        <p>Escaneo de vulnerabilidades con OpenVAS y análisis de resultados</p>
+      </a>
     </section>
-
-    <section class="bloque">
-      <span class="etiqueta">🎯 Propósito de esta sección:</span>
-      <div class="respuesta">
-        Esta colección de laboratorios permite aplicar técnicas de análisis, escaneo y evaluación de seguridad en entornos controlados. Cada ejercicio está diseñado para reforzar competencias clave en ciberseguridad ofensiva y defensiva, con trazabilidad hacia marcos como <strong>CIS Controls v8</strong>, <strong>NIST SP 800-115</strong> y <strong>MITRE ATT&CK</strong>.
-      </div>
-    </section>
-
-    <section class="bloque">
-      <span class="etiqueta">🔗 Navegación transversal:</span>
-      <div class="respuesta">
-        <ul>
-          <li><a href="/el-pergamino-digital/">🏠 Portada doctrinal</a></li>
-          <li><a href="/el-pergamino-digital/glosario/">📚 Glosario técnico-aforístico</a></li>
-          <li><a href="/el-pergamino-digital/simulador/">🎓 Simulador certificador</a></li>
-          <li><a href="/el-pergamino-digital/modulos/">🧭 Módulos de formación</a></li>
-        </ul>
-      </div>
-    </section>
-
   </main>
 
   <footer>
-    <p>
-      Esta sección forma parte de <strong>El Pergamino Digital</strong> · Proyecto doctrinal, técnico y pedagógico de Julio César Abreu.
-    </p>
+    <p>Este proyecto forma parte de <a href="https://pergamino-digital-ciberseguridad.blogspot.com/?m=1" target="_blank">El Pergamino Digital</a></p>
   </footer>
 
+  <script src="../js/script.js"></script>
 </body>
 </html>
