--- a/labs/index.html
+++ b/labs/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Laboratorios – El Pergamino Digital</title>
   <link rel="stylesheet" href="/el-pergamino-digital/assets/css/style.css" />
+  <script src="/el-pergamino-digital/assets/js/script.js"></script>
   <link rel="icon" href="/el-pergamino-digital/assets/favicon.png" type="image/png" />
 </head>
 <body>
