--- a/labs/index.html
+++ b/labs/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Laboratorios – El Pergamino Digital</title>
+  <title>L1aboratorios – El Pergamino Digital</title>
   <link rel="stylesheet" href="/el-pergamino-digital/assets/css/style.css" />
   <script src="/el-pergamino-digital/assets/js/script.js"></script>
   <link rel="icon" href="/el-pergamino-digital/assets/favicon.png" type="image/png" />
