--- a/labs/index.html
+++ b/labs/index.html
@@ -3,26 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lab 01 – Wireshark y tcpdump</title>
+  <title>Laboratorios 🧪 El Pergamino Digital</title>
 
-  <!-- Estilos embebidos -->
+  <!-- Estilos embebidos con modo oscuro y responsive premium -->
   <style>
+    :root {
+      color-scheme: dark;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f8f9fa;
-      color: #222;
+      background-color: #121212;
+      color: #e0e0e0;
       margin: 0;
       padding: 0;
     }
 
     nav {
-      background-color: #1a1a1a;
+      background-color: #1f1f1f;
       padding: 1em;
       text-align: center;
     }
 
     nav a {
-      color: white;
+      color: #e0e0e0;
       margin: 0 1em;
       text-decoration: none;
     }
@@ -35,34 +39,74 @@
     h1 {
       text-align: center;
       margin-top: 1.5em;
+      color: #ffffff;
     }
 
     .subtitulo {
       text-align: center;
-      color: #555;
+      color: #bbbbbb;
       margin-bottom: 2em;
     }
 
-    .contenedor-lab {
+    .grid-labs {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5em;
       padding: 2em;
-      max-width: 900px;
-      margin: auto;
     }
 
-    .contenedor-lab section {
-      margin-bottom: 2em;
+    .lab-card {
+      background-color: #1e1e1e;
+      border: 1px solid #333;
+      padding: 1.2em;
+      text-decoration: none;
+      color: #e0e0e0;
+      border-radius: 8px;
+      transition: transform 0.2s, box-shadow 0.2s;
     }
 
-    .contenedor-lab h2 {
-      color: #003366;
-      margin-bottom: 0.5em;
+    .lab-card:hover {
+      transform: scale(1.03);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
     }
 
     footer {
       text-align: center;
       padding: 2em;
-      background-color: #f1f1f1;
+      background-color: #1e1e1e;
       font-size: 0.9em;
+      color: #aaaaaa;
+    }
+
+    a {
+      color: #80d8ff;
+    }
+
+    a:hover {
+      color: #ffffff;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        font-size: 1.1em;
+      }
+
+      h1 {
+        font-size: 1.8em;
+      }
+
+      .subtitulo {
+        font-size: 1.1em;
+      }
+
+      nav a {
+        display: block;
+        margin: 0.5em 0;
+      }
+
+      .grid-labs {
+        padding: 1.2em;
+      }
     }
   </style>
 
@@ -78,25 +122,33 @@
       <a href="/el-pergamino-digital/simulador/">Simulador</a>
       <a href="/el-pergamino-digital/modulos/">Módulos</a>
     </nav>
-    <h1>Lab 01 – Monitorización de tráfico con Wireshark y tcpdump</h1>
-    <p class="subtitulo">Análisis de paquetes y tráfico en red como base para la detección de amenazas</p>
+    <h1>Laboratorios Técnicos</h1>
+    <p class="subtitulo">Prácticas certificadoras alineadas con estándares internacionales</p>
   </header>
 
-  <main class="contenedor-lab">
-    <section>
-      <h2>1. Objetivo técnico</h2>
-      <p>Capturar y analizar tráfico de red con herramientas de inspección profunda de paquetes.</p>
+  <main class="contenedor-labs">
+    <section class="grid-labs">
+      <a href="/el-pergamino-digital/labs/labs01/" class="lab-card">
+        <h2>🧪 Lab 01</h2>
+        <p>Monitorización de tráfico con Wireshark y tcpdump</p>
+      </a>
+      <a href="/el-pergamino-digital/labs/labs02/" class="lab-card">
+        <h2>🔍 Lab 02</h2>
+        <p>Descubrimiento de red y fingerprinting con Nmap</p>
+      </a>
+      <a href="/el-pergamino-digital/labs/labs03/" class="lab-card">
+        <h2>🌐 Lab 03</h2>
+        <p>Análisis de cabeceras HTTP y exposición de metadatos</p>
+      </a>
+      <a href="/el-pergamino-digital/labs/labs04/" class="lab-card">
+        <h2>🔓 Lab 04</h2>
+        <p>Captura de credenciales en protocolos inseguros</p>
+      </a>
+      <a href="/el-pergamino-digital/labs/labs05/" class="lab-card">
+        <h2>🛡️ Lab 05</h2>
+        <p>Escaneo de vulnerabilidades con OpenVAS</p>
+      </a>
     </section>
-
-    <section>
-      <h2>2. Herramientas utilizadas</h2>
-      <ul>
-        <li>Wireshark</li>
-        <li>tcpdump</li>
-      </ul>
-    </section>
-
-    <!-- Secciones 3 a 22 se completarán progresivamente -->
   </main>
 
   <footer>
